--- a/numpy/Why, What-Numpy.ipynb
+++ b/numpy/Why, What-Numpy.ipynb
@@ -11,7 +11,7 @@
    "id": "1910b1c2",
    "metadata": {},
    "source": [
-    "Source - Vizuara\n",
+    "Source - my sincere thanks to Sreedat Panat\n",
     "\n",
     "issues in Python\n",
     "\n",
